Вывод динамически объектов

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!-- filter-->
         <!--menu items -->
         <div class="section-center">
+            <!-- ITEM -->
             <article class="menu-item">
                 <img src="menu-item.jpeg" class="photo" alt="item">
                 <div class="item-info">
@@ -25,6 +26,7 @@
                     <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, placeat!</p>
                 </div>
             </article>
+            <!-- ITEM-END -->
         </div>
 
     </section>
