--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <div class="underline"></div>
         </div>
         <!-- filter-->
+        <div class="btn-container">
+            <button class="filter-btn" type="button" data-id="all">Все</button>
+            <button class="filter-btn" type="button" data-id="breakfast">Звтрк</button>
+            <button class="filter-btn" type="button" data-id="lunch">Обд</button>
+            <button class="filter-btn" type="button" data-id="shakes">Ужн</button>
+        </div>
         <!--menu items -->
         <div class="section-center">
             <!-- ITEM -->
