Получаем уникальные категории из объекта

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         </div>
         <!-- filter-->
         <div class="btn-container">
-            <button class="filter-btn" type="button" data-id="all">Все</button>
+            <!-- <button class="filter-btn" type="button" data-id="all">Все</button>
             <button class="filter-btn" type="button" data-id="breakfast">Звтрк</button>
             <button class="filter-btn" type="button" data-id="lunch">Обд</button>
-            <button class="filter-btn" type="button" data-id="shakes">Ужн</button>
+            <button class="filter-btn" type="button" data-id="shakes">Ужн</button> -->
         </div>
         <!--menu items -->
         <div class="section-center">
             <!-- ITEM -->
-            <article class="menu-item">
+            <!-- <article class="menu-item">
                 <img src="menu-item.jpeg" class="photo" alt="item">
                 <div class="item-info">
                     <header>
@@ -31,7 +31,7 @@
                     </header>
                     <p class="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, placeat!</p>
                 </div>
-            </article>
+            </article> -->
             <!-- ITEM-END -->
         </div>
 
